# dungen_minion_geometry

./: Cargo.toml  changelog.md
src/: area.rs  area_range.rs  cardinal_direction.rs  cardinal_rotation.rs  containment.rs  contains_local_position.rs  contains_position.rs  count_range.rs  defines.rs  has_area.rs  has_bottom.rs  has_height.rs  has_left.rs  has_local_position.rs  has_position.rs  has_right.rs  has_shape_area.rs  has_shape_position.rs  has_size.rs  has_top.rs  has_width.rs  inclusion.rs  intersects.rs  intersects_local.rs  intersects_local_pos.rs  intersects_local_position.rs  intersects_placed_shape.rs  intersects_pos.rs  intersects_position.rs  intersects_shape.rs  intersects_shape_pos.rs  invert_placed_shape.rs  is_area.rs  is_local_position.rs  is_position.rs  is_shape_area.rs  is_shape_position.rs  is_size.rs  lib.rs  local_position.rs  (+25 more)
