[package]
name = "dungen_minion_geometry"
version = "0.1.3"
authors = ["MouseProducedGames <largemouse@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Geometry support for dungen_minion."
homepage = "https://github.com/MouseProducedGames/dungen_minion_geometry"
repository = "https://github.com/MouseProducedGames/dungen_minion_geometry"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.11"
rand = "0.7.3"